message UpdateCapabilitiesCommandMessage {
	message Name {
		repeated bytes components = 8;
	}

	message CapabilitiesParameter {
		required string parameterType = 228; // should be a protobuf type
		optional string parameterDesc = 229; // what is this parameter for? (recommended)
	}

	message Capability {
		required Name commandPrefix = 230; // the name (after device prefix) of command 
		repeated string keywords = 231; // other devices can search for one or more keywords
						// e.g. 'cec', 'motion', 'thermostat'
		repeated CapabilitiesParameter parameterDesc = 232; // list of parameter descriptions
        optional bool needsSignature=233;
        required String deviceSerial=234;
	}

    repeated Capability capabilities = 235;
}
